# vladislav-vasilenko.github.io

./: .gitignore  delete_yandex.py  index.html  matcher.html  package.json  scrape.html  vite.config.ts
tools/cv_matcher/: .env  .gitignore  README.md  ai_cache.json  cv_matcher.py  debug.html  google_state.json  linkedin-userscript.user.js  main.py  next_data.json  pyproject.toml  sber_page.html  server.py  test_google.py  vacancy.txt
tools/cv_matcher/data/: linkedin_connections.json
tools/cv_matcher/linkedin-scraper-extension/: content.js  manifest.json  popup.html  popup.js  userscript.user.js
tools/cv_matcher/linkedin_profile/: Last Version  Local State  RunningChromeVersion  SingletonCookie  SingletonLock  SingletonSocket
tools/cv_matcher/linkedin_profile/Default/: Cookies  DIPS  DIPS-wal  Favicons  History  History-journal  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  (+1 more)
tools/cv_matcher/scratch/: analyze_clusters.py  analyze_vacancies.py  check_chroma.py  check_dim.py  clean_scrapers.py  fix_scrapers.py  top_matches.py  ultra_fix_scrapers.py
tools/cv_matcher/scripts/: batch_translate.py  build_cluster_map.py  build_vacancy_tree.py  cluster_linkedin.py  enrich_yandex.py  enrich_yandex_descriptions.py  index_meta_to_chroma.py  scrape_linkedin.py  scrape_online.py  search_vacancies.py  translate_vacancies.py
tools/cv_matcher/src/: debug_linkedin_connections.html  rag_db.py  scraper.py
tools/cv_matcher/viewer/: vacancies.css  vacancies.html  vacancies.js
(+422 files in other folders)
