[project]
name = "cv-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "bs4>=0.0.2",
    "chromadb>=1.5.8",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.14",
    "markdown>=3.10.2",
    "numpy>=2.4.4",
    "playwright>=1.58.0",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
]
